# CNN-Venture-Capital

./: README.md  pyproject.toml
venture_capital/: cnn.ipynb  train.ipynb
