[tool.poetry]
name = "venture-capital"
version = "0.1.0"
description = ""
authors = ["yongjun <aringod7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^1.3.3"
numpy = "^1.21.2"
torch = "^2.2.0"
torchtext = "^0.17.0"
scikit-learn = "^1.2.0"
nltk = "^3.6.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"